Implement OpenCV-based text region detection and OCR integration
- Added ComicTextDetectorAdapter for text region detection using OpenCV.
- Implemented region suppression logic to filter nested text regions.
- Created a new region OCR pipeline to handle text detection and recognition.
- Introduced RectPreview widget for interactive rectangle selection and visualization.
- Developed a demo script for visualizing text region detection and cropping.
- Enhanced contour detection with filtering strategies and preprocessing techniques.
- Updated plan documentation with strategies for improving contour detection.

--- a/MangaWebTranslator/config/config.json
+++ b/MangaWebTranslator/config/config.json
@@ -1,8 +1,8 @@
 {
   "ocr": {
     "lang": "jpn",
-    "conf_thresh": 0,
-    "preprocess": true,
+    "threshold": 240,
+    "preprocess": false,
     "show_boxes": true
   }
 }
