--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,8 @@
             "name": "Run MangaTranslator UI",
             "type": "python",
             "request": "launch",
-            "program": "${workspaceFolder}/MangaWebTranslator/main.py",
+            "module": "MangaWebTranslator.main",
+            "cwd": "${workspaceFolder}",
             "console": "integratedTerminal",
             "justMyCode": true
         }
